Fixes 14711: Account for list groups in collapsing panels
BS3 commits: 12091b9567e77f8b503d31860b3115791b072a3b

--- a/less/panels.less
+++ b/less/panels.less
@@ -162,6 +162,7 @@
   .panel {
     border-color: transparent;
     border-radius: 0;
+
     + .panel {
       margin-top: -3px;
     }
@@ -204,10 +205,12 @@
       font-size: @font-size-base;
     }
 
-    + .panel-collapse > .panel-body {
+    + .panel-collapse > .panel-body,
+    + .panel-collapse > .list-group {
       border-top: 0 none;
     }
   }
+
   .panel-footer {
     + .panel-collapse .panel-body {
       border-bottom: 0 none;
